added description to the introduction

--- a/DistributionsOfAspectsOfData.ipynb
+++ b/DistributionsOfAspectsOfData.ipynb
@@ -34,7 +34,13 @@
         "\n",
         "I am reading ISLP so I assume would be extra helpful for people who are reading that book.\n",
         "\n",
-        "ISLP doesn't get to much technical detail, and rightly so. However, depending on what question arises for you while reading it, you might need to deep diver a bit."
+        "ISLP doesn't get into too much technical detail, and rightly so. However, depending on what question arises for you while reading it, you might need to dive deeper a bit.\n",
+        "\n",
+        "This notebook is an attempt to generate random data. Later on I am going to use randomely generated data to do step by step calculations such as $\\beta_0$ or $SE(\\beta_0)$.\n",
+        "\n",
+        "When defining statistic formulas, there are often assumptions in work that are not stated explicitly. For example for a lot of the formulas  to be strictly valid, we need to assume that the errors $\\epsilon_i$ for each observation have common variance $σ^2$ and are uncorrelated(ISLP page 78).\n",
+        "\n",
+        "What does this exactly mean to the errors $\\epsilon_i$ for each observation have common variance $σ^2$? I am going to explain it in work of generating the data."
       ],
       "metadata": {
         "id": "KqCtM2LQKf2N"
@@ -65,7 +71,7 @@
           "height": 430
         }
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -106,7 +112,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -134,7 +140,7 @@
           "height": 447
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -184,7 +190,7 @@
           "height": 447
         }
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -230,7 +236,7 @@
           "height": 430
         }
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -271,7 +277,7 @@
           "height": 447
         }
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
