Complet Introduction and add Setup section

--- a/DistributionsOfAspectsOfData.ipynb
+++ b/DistributionsOfAspectsOfData.ipynb
@@ -16,7 +16,8 @@
         "Outline\n",
         "- Introduction (Purpose + scope)\n",
         "- Body\n",
-        "  - Define random generation process\n",
+        "  - Define random generation setup .\n",
+        "  - Define the random generation process.\n",
         "  - show prespectives on looking at data\n",
         "  - Plot the distributions of data from different prespectives\n",
         "- Conclusion: It can help define SE and beta, building up on this new view\n"
@@ -30,13 +31,14 @@
       "source": [
         "###Introduction\n",
         "\n",
-        "This is for people who are trying to learn statistic concepts, specially Linear Regression.\n",
+        "This is for people who are trying to learn statistic concepts, particularly Linear Regression concepts.\n",
         "\n",
-        "I am reading ISLP so I assume would be extra helpful for people who are reading that book.\n",
+        "I am reading [ISLP book](https://www.statlearning.com/), so I assume this notebook would be extra helpful for people who are reading that book.\n",
         "\n",
         "ISLP doesn't get into too much technical detail, and rightly so. However, depending on what question arises for you while reading it, you might need to dive deeper a bit.\n",
         "\n",
-        "This notebook is an attempt to generate random data. Later on I am going to use randomely generated data to do step by step calculations such as $\\beta_0$ or $SE(\\beta_0)$.\n",
+        "This notebook is an attempt to generate random data. Later on I am going to use randomely generated data to do step by step calculations for formulas in the book. For example I would like to calculate $\\beta_0$ or $SE(\\beta_0)$ for given set of observation.\n",
+        "\n",
         "\n",
         "When defining statistic formulas, there are often assumptions in work that are not stated explicitly. For example for a lot of the formulas  to be strictly valid, we need to assume that the errors $\\epsilon_i$ for each observation have common variance $σ^2$ and are uncorrelated(ISLP page 78).\n",
         "\n",
@@ -44,6 +46,26 @@
       ],
       "metadata": {
         "id": "KqCtM2LQKf2N"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Setup\n",
+        "Changing small detail about how things are setup can change formulas. So it is important to explicitly explain the details about setup and terminology.\n",
+        "\n",
+        "Each data point is tuple $(x, y)$. $x$ is the predictor and $y$ is the response. $x$ can have multiple dimensions, $y$ usually is just an scalar. When we look the set of such $x$ and $y$'s, they can get subscripts (i.e., $(x_i, y_i)$ is the i-th observation).\n",
+        "\n",
+        "\n",
+        "\n",
+        "Two important terminology: first one is **Population** and second one is Set of **Observations**. Populations is set of alllll exisiting data points that ever existed, while set of Observations is the ones we sampled and observed. The difference between them is important when we define measures of accuracy of fit.\n",
+        "\n",
+        "Why is it important? Mostly because of theoritical assumptions we use to come up with proofs and formulas such as the one for $SE(\\beta_0)$. While for an ISLP reader the detailed proof might not be that important, but to understand why formulas makes any sens, it is important to know these differences and some of the assumptions.\n",
+        "\n",
+        "In this notbook I am going to generate the population data set. At the end I sample a set of observations. And along the way I throw as many graph as I can at you just to see different way of looking at population data set.  \n"
+      ],
+      "metadata": {
+        "id": "jc98GT8CLN6K"
       }
     },
     {
