Revise Setup section and add Data Generation Proc

--- a/DistributionsOfAspectsOfData.ipynb
+++ b/DistributionsOfAspectsOfData.ipynb
@@ -52,9 +52,9 @@
       "cell_type": "markdown",
       "source": [
         "### Setup\n",
-        "Changing small detail about how things are setup can change formulas. So it is important to explicitly explain the details about setup and terminology.\n",
+        " In general, the object of our study can sound very similar on surface, but cofusing them with each other, causes lack of understanding as we move forward. Moreover, Changing small detail about how things are setup can change formulas.So it is important to explicitly explain the details about setup and terminology.\n",
         "\n",
-        "Each data point is tuple $(x, y)$. $x$ is the predictor and $y$ is the response. $x$ can have multiple dimensions, $y$ usually is just an scalar. When we look the set of such $x$ and $y$'s, they can get subscripts (i.e., $(x_i, y_i)$ is the i-th observation).\n",
+        "Each data point is tuple $(x, y)$. $x$ is the predictor and $y$ is the response. $x$ can have multiple dimensions, $y$ usually is just an scalar. When we look at the set of such $x$ and $y$'s, they can get subscripts (i.e., $(x_i, y_i)$ is the i-th observation).\n",
         "\n",
         "\n",
         "\n",
@@ -67,6 +67,49 @@
       "metadata": {
         "id": "jc98GT8CLN6K"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Data Generation Process\n",
+        "As I mentioned above, I am going to generate a *population* set of data points, that is not to be confused with set of Observed data.\n",
+        "\n",
+        "Data points are $(x, y)$ where $x$ is one dimensional in range of 1 to 10"
+      ],
+      "metadata": {
+        "id": "53Pz2iVzJeEh"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "# x_i's are from 1 to 10\n",
+        "X = np.linspace(1, 10, 30)"
+      ],
+      "metadata": {
+        "id": "T2MnPCVyJdwT"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Generating $x$'s was simple. Now how do we generate $y$. HERE"
+      ],
+      "metadata": {
+        "id": "O6e8Omu3KVTm"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Ph1C9AQCJcli"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
