Add explanation for Data Generation Proc

--- a/DistributionsOfAspectsOfData.ipynb
+++ b/DistributionsOfAspectsOfData.ipynb
@@ -85,18 +85,52 @@
       "source": [
         "import numpy as np\n",
         "# x_i's are from 1 to 10\n",
-        "X = np.linspace(1, 10, 30)"
+        "X = np.linspace(1, 10, 30)\n",
+        "X"
       ],
       "metadata": {
-        "id": "T2MnPCVyJdwT"
+        "id": "T2MnPCVyJdwT",
+        "outputId": "0eb7a7e5-5068-4ed7-ab62-7eec21048bb4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": 1,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 1.        ,  1.31034483,  1.62068966,  1.93103448,  2.24137931,\n",
+              "        2.55172414,  2.86206897,  3.17241379,  3.48275862,  3.79310345,\n",
+              "        4.10344828,  4.4137931 ,  4.72413793,  5.03448276,  5.34482759,\n",
+              "        5.65517241,  5.96551724,  6.27586207,  6.5862069 ,  6.89655172,\n",
+              "        7.20689655,  7.51724138,  7.82758621,  8.13793103,  8.44827586,\n",
+              "        8.75862069,  9.06896552,  9.37931034,  9.68965517, 10.        ])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Generating $x$'s was simple. Now how do we generate $y$. HERE"
+        "I generated 30 different $x$ values, between 0 and 1, all equally spaced. Generating $x$'s was simple, nothing intricate of random.\n",
+        "\n",
+        "How to generate $y$'s though? Well, $y$'s need to meet several cirteria.\n",
+        "1. They are roughly equal to multiple of $x$ plus a constant. Let's say $y_i ≈ B_1 * x_i + B_0$.\n",
+        "2. The different between $y_i$ and $B_1 * x_i + B_0$ forms a normal distribution with variance $σ^2$. Lets call this difference error $ϵ_i$.\n",
+        "3.  Errors $ϵ_i$ for each observation have common variance  $σ^2$.\n",
+        "\n",
+        "I think of the third rule as a simplifying assumption, as it makes the generation easier.\n",
+        "\n",
+        "It's a bit vague thoug. As I mentioned, main purpose of this notbook is to clarify details like this in the process of making things.\n",
+        "\n",
+        "So lets start generating data by having 3rd criteria in mind.\n",
+        "\n",
+        "I pick B0, B1, and the first predictor $x_1$ and I will generate a set of $y$'s only for that $x_1$, randomely generated. HERE"
       ],
       "metadata": {
         "id": "O6e8Omu3KVTm"
