--- a/DistributionsOfAspectsOfData.ipynb
+++ b/DistributionsOfAspectsOfData.ipynb
@@ -90,10 +90,10 @@
       ],
       "metadata": {
         "id": "T2MnPCVyJdwT",
-        "outputId": "0eb7a7e5-5068-4ed7-ab62-7eec21048bb4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "0eb7a7e5-5068-4ed7-ab62-7eec21048bb4"
       },
       "execution_count": 3,
       "outputs": [
@@ -130,7 +130,7 @@
         "\n",
         "So lets start generating data by having 3rd criteria in mind.\n",
         "\n",
-        "I pick B0, B1, and the first predictor $x_1$ and I will generate a set of $y$'s only for that $x_1$, randomely generated. HERE"
+        "I pick $\\beta_0$ = 4  , $β_1$ equal to 2. I startd with  first predictor $x_1$ and I will generate a `n_repeat`=1000  $y$'s only for that $x_1$, randomely generated. HERE"
       ],
       "metadata": {
         "id": "O6e8Omu3KVTm"
@@ -154,6 +154,7 @@
         "# generate some data for x_1 = 1\n",
         "B0 = 4\n",
         "B1 = 2\n",
+        "# change n_ops with repeat\n",
         "n_obs = 10000 # number of observation for individual x_i's\n",
         "import numpy as np\n",
         "# x_i's are from 1 to 10\n",
