--- a/DistributionsOfAspectsOfData.ipynb
+++ b/DistributionsOfAspectsOfData.ipynb
@@ -95,7 +95,7 @@
         },
         "outputId": "0eb7a7e5-5068-4ed7-ab62-7eec21048bb4"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -117,7 +117,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "I generated 30 different $x$ values, between 0 and 1, all equally spaced. Generating $x$'s was simple, nothing intricate of random.\n",
+        "I generated 30 different $x$ values, between 0 and 1, all equally spaced. Generating $x$'s was simple, nothing intricate or random.\n",
         "\n",
         "How to generate $y$'s though? Well, $y$'s need to meet several cirteria.\n",
         "1. They are roughly equal to multiple of $x$ plus a constant. Let's say $y_i ≈ B_1 * x_i + B_0$.\n",
@@ -126,11 +126,11 @@
         "\n",
         "I think of the third rule as a simplifying assumption, as it makes the generation easier.\n",
         "\n",
-        "It's a bit vague thoug. As I mentioned, main purpose of this notbook is to clarify details like this in the process of making things.\n",
+        "It's a bit vague though. As I mentioned, main purpose of this notbook is to clarify details like this in the process of making things.\n",
         "\n",
         "So lets start generating data by having 3rd criteria in mind.\n",
         "\n",
-        "I pick $\\beta_0$ = 4  , $β_1$ equal to 2. I startd with  first predictor $x_1$ and I will generate a `n_repeat`=1000  $y$'s only for that $x_1$, randomely generated. HERE"
+        "As for the constants, lets $\\beta_0$ = 4  , $β_1$ equal to 2. And we will generate `n_repeat`=1000  $y$'s only for any observation $x_i$ (i.e. Total size of population is `n_repeat * len(X)`)"
       ],
       "metadata": {
         "id": "O6e8Omu3KVTm"
@@ -138,28 +138,36 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# generate yi's randomely. defining constants\n",
+        "B0 = 4\n",
+        "B1 = 2\n",
+        "# change n_ops with repeat\n",
+        "n_repeat = 10000 # number of observation for individual x_i's"
+      ],
       "metadata": {
-        "id": "Ph1C9AQCJcli"
+        "id": "eeZzN74loEeY"
       },
       "execution_count": null,
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Now I start with  first observation $x_1$ . Now what exatly has a normal distribution here? $y_i$'s ?HERE"
+      ],
+      "metadata": {
+        "id": "_zyehaaSoF3z"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# generate random distro\n",
         "# Y = 2 * X + 4 + epsilon\n",
         "# epsilon ~ N(0, 1)\n",
-        "# generate some data for x_1 = 1\n",
-        "B0 = 4\n",
-        "B1 = 2\n",
-        "# change n_ops with repeat\n",
-        "n_obs = 10000 # number of observation for individual x_i's\n",
         "import numpy as np\n",
-        "# x_i's are from 1 to 10\n",
-        "X = np.linspace(1, 10, 30)\n",
-        "y_1 = 2 * 1 + 4 + np.random.normal(0, 1, n_obs)\n",
+        "\n",
+        "y_1 = 2 * 1 + 4 + np.random.normal(0, 1, n_repeat)\n",
         "import matplotlib.pyplot as plt\n",
         "plt.hist(y_1, bins = 100);"
       ],
