--- a/DistributionsOfAspectsOfData.ipynb
+++ b/DistributionsOfAspectsOfData.ipynb
@@ -130,7 +130,7 @@
         "\n",
         "So lets start generating data by having 3rd criteria in mind.\n",
         "\n",
-        "As for the constants, lets $\\beta_0$ = 4  , $β_1$ equal to 2. And we will generate `n_repeat`=1000  $y$'s only for any observation $x_i$ (i.e. Total size of population is `n_repeat * len(X)`)"
+        "As for the constants, lets $\\beta_0$ = 4 , $β_1=2$, and we will generate `n_repeat`=1000  $y$'s only for any observation $x_i$ (i.e. Total size of population is `n_repeat * len(X)`)"
       ],
       "metadata": {
         "id": "O6e8Omu3KVTm"
