data gen-small increment

--- a/DistributionsOfAspectsOfData.ipynb
+++ b/DistributionsOfAspectsOfData.ipynb
@@ -95,7 +95,7 @@
         },
         "outputId": "9e4c3468-9b00-48a9-d1e2-6af67a003bfd"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -153,7 +153,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -216,7 +216,7 @@
           "height": 487
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -234,10 +234,17 @@
       "cell_type": "markdown",
       "source": [
         "Notice a couple of things about the graphs.\n",
-        "In the second graph from the top, what is the $\\mu$ and why?\n",
-        "The median of y values is 6 which is the predicted value by linear regression.\n",
+        "In the second graph from the top, what is the $\\mu$  or mean for y values, and why?\n",
+        "The mean value is equal to 6, that is the value that population regression model predicts.\n",
         "\n",
-        "What about third graph from the top? HERE\n",
+        "\n",
+        "\n",
+        "What about third graph from the top?\n",
+        "It looks pretty much like the second graph, except for it's mean value is 0.\n",
+        "\n",
+        "Finally let's look at first graph from the top that is values of y vs values of x. It is just a stack of dots, that form a line parallel to y-axes. so we know there is no one-to-on relationship between x's and y's.\n",
+        "\n",
+        "Maybe it would be good to take a look at X distribution as well, what does it look like? is it also Gaussian?\n",
         "\n"
       ],
       "metadata": {
