--- a/DistributionsOfAspectsOfData.ipynb
+++ b/DistributionsOfAspectsOfData.ipynb
@@ -52,7 +52,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -161,7 +161,7 @@
         },
         "outputId": "9096e742-3f86-4d75-8973-29c66527fad8"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -219,7 +219,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -254,7 +254,7 @@
       "metadata": {
         "id": "zk-hFI7kE-5P"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -309,7 +309,7 @@
           "height": 487
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -364,7 +364,7 @@
           "height": 430
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -412,7 +412,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -440,7 +440,7 @@
           "height": 447
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -490,7 +490,7 @@
           "height": 447
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -536,7 +536,7 @@
           "height": 430
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -578,7 +578,7 @@
           "height": 447
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -629,7 +629,7 @@
           "height": 447
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -677,7 +677,7 @@
           "height": 430
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -714,7 +714,7 @@
           "height": 430
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -731,7 +731,17 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Let's see the charts altogether :) HERE!!\n"
+        "## Conclusion\n",
+        "Just as a friendly conclusion, let's see what steps we have done and what we have learnt. So we generated a a population dataset that of size 300,000 datapoints. It means we observed 300,000 one dimensional predictors (`X`) and 300,000 responses (`Y`).\n",
+        "\n",
+        "Something to notice is that, a lot of observations share the same predictor but different response. (e,g,. `X[0] = X[1] but Y[0] != Y[1]`) HERE!!!!\n",
+        "\n",
+        "- [] add it to a code cell\n",
+        "\n",
+        "And finally notice the population regression line that is described as $Y = \\beta_1 X + \\beta_0$.\n",
+        "\n",
+        "We haven't used any matrix notation yet. But let's switch to matrix notation. HERE!!\n",
+        "Let's see the charts altogether.\n"
       ],
       "metadata": {
         "id": "UG-BDlUsW-Wp"
@@ -759,7 +769,7 @@
           "height": 486
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -775,8 +785,14 @@
     },
     {
       "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "2FR1VJRGxNQc"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "source": [
-        "## Conclusion\n",
         "Finally, I save the generated population for next notebooks."
       ],
       "metadata": {
