--- a/DistributionsOfAspectsOfData.ipynb
+++ b/DistributionsOfAspectsOfData.ipynb
@@ -734,14 +734,11 @@
         "## Conclusion\n",
         "Just as a friendly conclusion, let's see what steps we have done and what we have learnt. So we generated a a population dataset that of size 300,000 datapoints. It means we observed 300,000 one dimensional predictors (`X`) and 300,000 responses (`Y`).\n",
         "\n",
-        "Something to notice is that, a lot of observations share the same predictor but different response. (e,g,. `X[0] = X[1] but Y[0] != Y[1]`) HERE!!!!\n",
+        "Something to notice is that, a lot of observations share the same predictor but different response. (e,g,. `X[0] = X[1] but Y[0] != Y[1]`)\n",
         "\n",
-        "- [] add it to a code cell\n",
         "\n",
         "And finally notice the population regression line that is described as $Y = \\beta_1 X + \\beta_0$.\n",
-        "\n",
-        "We haven't used any matrix notation yet. But let's switch to matrix notation. HERE!!\n",
-        "Let's see the charts altogether.\n"
+        "Let's see all the graphs.\n"
       ],
       "metadata": {
         "id": "UG-BDlUsW-Wp"
@@ -782,6 +779,20 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "We haven't used any matrix notation yet. Let's switch to matrix notation.\n",
+        "At first glance, it looks like we can model these as p  (number of features) in n-dimensional space. And then we can define the purpose to be to find a linear combination of given p points that is equal to y which is another n dimensional vector. That means we sould like that span of p vectors, capture vector y.\n",
+        "\n",
+        "But the graphs are another view that is p+1 dimensional space and n points and fitting a linear surface. why? HERE!!!\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "7VFcbh2L5WXe"
+      }
     },
     {
       "cell_type": "markdown",
