--- a/DistributionsOfAspectsOfData.ipynb
+++ b/DistributionsOfAspectsOfData.ipynb
@@ -783,28 +783,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "\n",
-        "We haven't used any matrix notation yet. Let's switch to matrix notation.\n",
-        "At first glance, it looks like we can model these as p  (number of features) in n-dimensional space. And then we can define the purpose to be to find a linear combination of given p points that is equal to y which is another n dimensional vector. That means we sould like that span of p vectors, capture vector y.\n",
-        "\n",
-        "But the graphs are another view that is p+1 dimensional space and n points and fitting a linear surface. why? HERE!!!\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "7VFcbh2L5WXe"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "2FR1VJRGxNQc"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Finally, I save the generated population for next notebooks."
+        "This notebook generates random data based on assumptions in the ISLP book. As we progress through the book, we can explore new concepts and expand on this dataset. Ultimately, I save the generated population data for use in subsequent notebooks."
       ],
       "metadata": {
         "id": "GGojoDHFZ4H_"
