--- a/LinearRegressionMatrix.ipynb
+++ b/LinearRegressionMatrix.ipynb
@@ -16,6 +16,7 @@
         "Outline\n",
         "- Introduction (Purpose + scope)\n",
         "- Body\n",
+        "  - Load data in repo\n",
         "  - Linear regression is solving linear equations approximately.\n",
         "  - Matrix notation of linear regression.\n",
         "  - Different algebraic ways one can view the problem.\n",
@@ -74,9 +75,15 @@
       "cell_type": "markdown",
       "source": [
         "## Introduction\n",
-        "I have created a [jupyter notebook](https://colab.research.google.com/github/aminehd/AminehTechnicalWritings/blob/main/DistributionsOfAspectsOfData.ipynb) to generate some random data. The random data from  previous notebook follows the assumption of linear regression. This assumes that if you subtract a linear combination of predictors from the response, the result will have a standard normal distribution. Hence, you can fit a linear model to a given sample.\n",
+        "I have created a [jupyter notebook](https://colab.research.google.com/github/aminehd/AminehTechnicalWritings/blob/main/DistributionsOfAspectsOfData.ipynb) to generate some random data.\n",
         "\n",
-        "It's important to pause a bit and notice the differenc of a given sample of size n and the whole population. Let's look at a given sample\n",
+        "Note: At the end of each notebook, I save artifact to the repo so we can load them in any subsequent notebook. 👾 📦\n",
+        "\n",
+        "The random data from  previous notebook follows the assumption of linear regression. This assumes that if you subtract a linear combination of predictors from the response, the result will have a standard normal distribution. Hence, you can fit a linear model to a given sample.\n",
+        "\n",
+        "\n",
+        "\n",
+        "It's important to pause a bit and notice the differenc of a given sample of size n and the whole population. Let's look at a given sample. ⏸\n",
         "\n",
         "\n",
         "\n",
