first algebraic interpretation

--- a/LinearRegressionMatrix.ipynb
+++ b/LinearRegressionMatrix.ipynb
@@ -48,7 +48,7 @@
       ],
       "metadata": {
         "id": "19DE6S_AX97z",
-        "outputId": "f2881b65-49c3-4fea-f293-a0e18d2385f3",
+        "outputId": "c2671b28-30a9-4c7c-b969-2ad9526e3002",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -61,12 +61,12 @@
           "text": [
             "fatal: cannot change to 'AminehTechnicalWritings': No such file or directory\n",
             "Cloning into 'AminehTechnicalWritings'...\n",
-            "remote: Enumerating objects: 107, done.\u001b[K\n",
-            "remote: Counting objects: 100% (107/107), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (104/104), done.\u001b[K\n",
-            "remote: Total 107 (delta 55), reused 3 (delta 1), pack-reused 0\u001b[K\n",
-            "Receiving objects: 100% (107/107), 3.04 MiB | 21.17 MiB/s, done.\n",
-            "Resolving deltas: 100% (55/55), done.\n"
+            "remote: Enumerating objects: 110, done.\u001b[K\n",
+            "remote: Counting objects: 100% (110/110), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (107/107), done.\u001b[K\n",
+            "remote: Total 110 (delta 56), reused 3 (delta 1), pack-reused 0\u001b[K\n",
+            "Receiving objects: 100% (110/110), 3.07 MiB | 21.65 MiB/s, done.\n",
+            "Resolving deltas: 100% (56/56), done.\n"
           ]
         }
       ]
@@ -109,7 +109,7 @@
         "id": "-r3NHJOxJL4N",
         "outputId": "c8b7e97a-99fb-458c-fa02-c612a363c87e"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -138,7 +138,7 @@
         "id": "zJ36DZ4nK7aE",
         "outputId": "d7c81c0b-381e-4f82-fbe7-8092bd969109"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -171,7 +171,7 @@
         "id": "C8IKsSGKKfew",
         "outputId": "50329536-8610-4a5b-c0eb-9514eea17c6e"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -259,32 +259,72 @@
         "\\end{bmatrix}\n",
         "+ ϵ\n",
         "$$\n",
-        "Another little trick here would help making the left hand side 0. 🧙\n",
-        "$$\n",
-        "0 =\n",
-        "\\begin{bmatrix}\n",
-        "1 & x_{11} & x_{12} & \\ldots & x_{1p} & y_1\\\\\n",
-        "1 & x_{21} & x_{22} & \\ldots & x_{2p} & y_2\\\\\n",
-        "\\vdots &\\vdots & \\vdots & \\ddots & \\vdots \\\\\n",
-        "1 & x_{n1} & x_{n2} & \\ldots & x_{np} & y_n\n",
-        "\\end{bmatrix}\n",
-        "\\begin{bmatrix}\n",
-        "\\beta_0 \\\\\n",
-        "\\vdots\\\\\n",
-        "\\beta_n\\\\\n",
-        "-1\n",
-        "\\end{bmatrix}\n",
-        "+ ϵ\n",
-        "$$\n",
+        "\n",
         "There is two linear algebraic interpretations of this:\n",
         "\n",
         "\n",
-        "1.   There are p n-dimensional vectors $x_i = [1, x_{1i}, \\ldots, x_{np}]^T$. The second formula means we would like the y to happens on the span of $x_i$'s. To solve the system, one would like  a linear combination of the $x_i$'s that equals to y. Subsequently that means finding $p + 1$ scalars $\\beta_0, /cdots , \\beta_p$.\n",
-        "2.   List item HERE!!!\n",
+        "First interpretation is to have $p$ n-dimensional vectors $x_i = [1, x_{1i}, \\ldots, x_{np}]^T$. Then one can expand the above formula to: 🤯\n",
+        "\n",
+        "$$\n",
+        "y =\n",
+        "\\begin{bmatrix}\n",
+        "1 & x_{11} & x_{12} & \\ldots & x_{1p} \\\\\n",
+        "1 & x_{21} & x_{22} & \\ldots & x_{2p} \\\\\n",
+        "\\vdots &\\vdots & \\vdots & \\ddots & \\vdots \\\\\n",
+        "1 & x_{n1} & x_{n2} & \\ldots & x_{np}\n",
+        "\\end{bmatrix}\n",
+        "\\begin{bmatrix}\n",
+        "\\beta_0 \\\\\n",
+        "\\vdots \\\\\n",
+        "\\beta_p \\\\\n",
+        "\\end{bmatrix}\n",
+        "+ ϵ\n",
+        "= \\\\\n",
+        "\\beta_0 *\n",
+        "\\begin{bmatrix}\n",
+        "1\\\\\n",
+        "1 \\\\\n",
+        "\\vdots\\\\\n",
+        "1\n",
+        "\\end{bmatrix}\n",
+        "+ \\cdots + \\beta_j *\n",
+        "\\begin{bmatrix}\n",
+        "x_{1j} \\\\\n",
+        "x{2j} \\\\\n",
+        "\\vdots \\\\\n",
+        "x_{nj}\n",
+        "\\end{bmatrix} + \\cdots + \\beta_p *\n",
+        "\\begin{bmatrix}\n",
+        "x_{1p} \\\\\n",
+        "x_{2p} \\\\\n",
+        "\\vdots \\\\\n",
+        "x_{np}\n",
+        "\\end{bmatrix} + \\epsilon =\\\\\n",
+        "\\sum_{i \\in [0, ...,p]} \\beta_i * \\mathbf{x}_i\n",
+        "$$\n",
+        "\n",
+        "The right hand of fomula is a linear combinations of all $\\mathbf{x}_i`s$ and the all one vector. The geometric interpretation of it is that we would like y to be in the hyperplane created by span of these $p + 1$ vectors. And subsequently write y as a linear combination of them. If the $p +1 $ vectors are linearly independent and their span include y, this means changing the basis for y.\\\\\n",
+        "Now one can see, the more feature there is compared to the sample size(n), the liklier it gets to have an answer because the span of the vectors is bigger.\n",
+        "\n",
+        "\n",
+        "\n",
         "\n"
       ],
       "metadata": {
         "id": "P3AqCTUnDqE_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The Second algebraic view HERE!!!\n",
+        " The . To solve the system, one would like  a linear combination of the $x_i$'s that equals to y. Subsequently that means finding $p + 1$ scalars $\\beta_0, /cdots , \\beta_p$.\n",
+        "\n",
+        "\n",
+        "2.   List item HERE!!!"
+      ],
+      "metadata": {
+        "id": "j61xxxCfAC2X"
       }
     },
     {
